<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			  xmlns:tools="http://schemas.android.com/tools"
			  android:layout_width="match_parent"
			  android:layout_height="match_parent"
			  android:orientation="vertical"
			  android:gravity="center_horizontal"
			  android:paddingBottom="@dimen/activity_vertical_margin"
			  android:paddingLeft="@dimen/activity_horizontal_margin"
			  android:paddingRight="@dimen/activity_horizontal_margin"
			  android:paddingTop="60dp">
			  <!-- android:background="@drawable/login_bg" -->
			  
        <!-- <ImageView android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_marginBottom="40dp"
                   android:src="@drawable/system_name" /> -->
    
	    <EditText android:layout_width="match_parent"
	        	  android:id="@+id/user_name"
	        	  android:hint="@string/user_name"
	        	  android:inputType="text"
	        	  android:layout_marginBottom="15dp"
	              android:layout_height="wrap_content" />
    
	    <EditText android:layout_width="match_parent"
	        	  android:id="@+id/pass"
	        	  android:hint="@string/pass"
	        	  android:inputType="textPassword"
	        	  android:layout_marginBottom="15dp"
	              android:layout_height="wrap_content" />
    
	    <Button android:layout_width="300dp"
	        	android:layout_height="wrap_content"
	        	android:id="@+id/login_button"
	        	android:text="@string/login_button" />
	    
	    <ImageView android:id="@+id/setting"
	        	   android:layout_width="wrap_content"
	        	   android:layout_height="wrap_content"
	        	   android:src="@drawable/settings_icon" />

</LinearLayout>
